group 'agoda-file-download'
apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
    compile group: 'commons-net', name: 'commons-net', version: '3.3'
    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
    compile group: 'com.jcraft', name: 'jsch', version: '0.1.53'
    compile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.6.5'
    compile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
    compile "com.beust:jcommander:1.48"
}

test {
    useJUnit()
    testLogging.showStandardStreams = true
    jvmArgs '-XX:MaxPermSize=256m'
    beforeTest { descriptor ->
        logger.lifecycle("Running test: " + descriptor)
    }
    onOutput { descriptor, event ->
        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
    }
    reports {
        junitXml.enabled = true
        junitXml.destination = file('build/reports')
        html.enabled = true
    }
}

jar {
    manifest {
        attributes 'Main-Class': 'com.agoda.Application'
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
    baseName 'agoda-downloader'
    version = '0.1.0'
}


